--- a/index.html
+++ b/index.html
@@ -1,55 +1,53 @@
-<html lang="en">
+<html lang="en" data-bs-theme="dark">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>BlackJack</title>
+    <title>Welcome to BlackJack</title>
+    <style></style>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="style.css" />
-
-    <script src="script.js" defer></script>
   </head>
-  <body id="play--area--body">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <div class="container-fluid">
-        <h3 class="navbar-brand">BlackJack</h3>
-
-        <button type="button" class="btn btn-secondary" id="btn--getNewDeck">
-          Get New Deck
-        </button>
-        <button type="button" class="btn btn-secondary" id="btn--shufffle">
-          Shuffle Deck
-        </button>
-      </div>
-    </nav>
+  <body>
     <main>
-      <div id="dealer--div" class="px-4 py-5 my-5 text-center">
-        <div>
-          <h3>Dealer</h3>
-          <div id="dealer--hand"></div>
+      <div class="px-4 my-5 text-center">
+        <img
+          class="d-block mx-auto mb-4"
+          src="./Images/blackJack2.png"
+          alt
+          width="519"
+          height="363"
+        />
+        <h1 class="display-5 fw-bold text-body-emphasis">BlackJack</h1>
+        <div class="col-lg-6 mx-auto">
+          <p class="lead mb-4">
+            Combine the value of your cards to get 21! All face cards are worth
+            10 and Ace can be worth 1 or 11. Hit draws another card and stay
+            allows your to stop drawing cards. If you go over 21 you
+            automatically lose.
+          </p>
+          <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+            <button
+              id="btn-to-play"
+              type="button"
+              class="btn btn-primary btn-lg px-4 gap-3"
+            >
+              Play
+            </button>
+          </div>
         </div>
-      </div>
-      <div class="lg"></div>
-      <div id="player--div" class="px-4 py-5 my-5 text-center">
-        <div>
-          <h3>Player</h3>
-          <div id="player--hand"></div>
-        </div>
-        <button type="button" class="btn btn-secondary" id="btn--hit">
-          Hit
-        </button>
-        <button type="button" class="btn btn-secondary" id="btn--stay">
-          Stay
-        </button>
       </div>
     </main>
-
-    <!--Bootstrap-->
+    <script>
+      const play_btn = document.getElementById("btn-to-play");
+      play_btn.addEventListener("click", function () {
+        window.location.href = "./play.html";
+      });
+    </script>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
